<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:minHeight="56dp"
    android:paddingStart="@dimen/spacing_16"
    android:paddingEnd="@dimen/spacing_12">

    <ImageView
        android:id="@+id/ivMenuIcon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_person_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_secondary" />

    <TextView
        android:id="@+id/tvMenuTitle"
        style="@style/TextAppearance.App.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_14"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/profile_menu"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivMenuChevron"
        app:layout_constraintStart_toEndOf="@id/ivMenuIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMenuChevron"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/view_detail"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_secondary" />
</androidx.constraintlayout.widget.ConstraintLayout>
